--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.jakewharton:disklrucache:2.0.2'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.5.2'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.2'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.2'
+//    compile 'com.fasterxml.jackson.core:jackson-core:2.5.2'
+//    compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.2'
+//    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.2'
 }
