add the expandable list example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
         <activity
             android:name=".GalleryActivity"
             android:label="@string/title_activity_gallary" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name=".ExpandableListActivity"
+            android:label="@string/title_activity_expandable_list" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
