add the intent examples

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,17 @@
         <activity
             android:name=".CallPrimeActivity"
             android:label="@string/title_activity_call_prime" >
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity
+            android:name=".AsyncTaskTest"
+            android:label="@string/title_activity_async_task_test" >
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
@@ -93,12 +104,28 @@
             <!--</intent-filter>-->
         </activity>
         <activity
-            android:name=".AsyncTaskTest"
-            android:label="@string/title_activity_async_task_test" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".IntentTest"
+            android:label="@string/title_activity_intent_test" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name=".SecondActivity"
+            android:label="@string/title_activity_intent_test" >
+            <intent-filter>
+                <action android:name="com.example.wingwing.first.intentTestSecondA" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ThirdActivity"
+            android:label="@string/title_activity_intent_test" >
+            <intent-filter>
+                <action android:name="com.example.wingwing.first.intentTestSecondA" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
